--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tannerfaber.github.io/VideoPlayer/",
   "name": "video-player",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,8 @@
     "save": "^2.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
